[gd_scene load_steps=2 format=3 uid="uid://diwnqww1sk7ai"]

[ext_resource type="Script" uid="uid://d1nptvy43addk" path="res://Godot script/Scenes Script/whiteboard_app.gd" id="1_jy27o"]

[node name="WhiteboardApp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jy27o")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DrawingLayer" type="Node2D" parent="."]
z_index = 1

[node name="UITools" type="Control" parent="."]
visible = false
z_index = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PenToolButton" type="Button" parent="UITools"]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.05
anchor_top = 1.037
anchor_right = 4.05
anchor_bottom = 1.037
offset_left = -19.0
offset_top = -15.48
offset_right = 19.0
offset_bottom = 15.52
text = "Pen"

[node name="TextToolButton" type="Button" parent="UITools"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.2
anchor_top = 1.062
anchor_right = 2.2
anchor_bottom = 1.062
offset_left = -21.0
offset_top = -15.48
offset_right = 21.0
offset_bottom = 15.52
text = "Text"

[node name="EraserToolButton" type="Button" parent="UITools"]
layout_mode = 0
offset_left = 208.0
offset_top = 29.0
offset_right = 266.0
offset_bottom = 60.0
text = "Eraser"

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Submit Answer"

[node name="AnswerTextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
